--- a/naplesWebSite/css/main.css
+++ b/naplesWebSite/css/main.css
@@ -1,7 +1,17 @@
 * {
     box-sizing: border-box;
 }
-a {
+.img-article{
+    float: right;
+    width: 40%;
+    height: auto;
+    clear: both;
+}
+.img-responsive{
+    width: 100%;
+    height: auto;
+}
+.button {
     width: 100%;
     background-color: #ddd;
     text-decoration: none;
@@ -46,11 +56,35 @@ footer {
     text-align: center;
     color: white;
 }
-@media (max-width: 1230px) {
+
+@media (max-width: 1230px){
     section {
         flex-direction: column;
     }
     nav{
-      max-width: 100%;
+        max-width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    .button{
+        width: auto;
+        padding-right: 40px;
+        padding-left: 40px;
+        margin-top: 0px;
+        margin-right: 10px;
+    }
+}
+@media (max-width: 768px) {
+    section {
+        flex-direction: column;
+    }
+    nav{
+        max-width: 100%;
+        flex-direction: column;
+    }
+    .button{
+        width: 100%;
+        margin-top: 10px;
     }
 }
